[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "langchain>=0.3.14",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.14",
    "langchain-core>=0.3.29",
    "langchain-openai>=0.2.14",
    "langchain-text-splitters>=0.3.4",
    "pydantic>=2.10.4",
    "uvicorn>=0.34.0",
]
